--- a/.classpath
+++ b/.classpath
@@ -29,5 +29,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="E:/Oleg/Projects/workspace/libraries/JavaMail API 1.5.1 Release/javax.mail.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
