--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
             <version>5.1.27</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.5.1</version>
+		</dependency>
     </dependencies>
     <build>
         <extensions>
